assignment3/app-1/app-1-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-dep
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: app-1
          image: ghcr.io/denoslab/ensf400-sample-app:v1
          ports:
            - containerPort: 8080
